testsuite/poke.pkl/mul-integers-overflow-diag-1.pk
/* { dg-do compile } */

var res
  = 0x7fff_ffff * 4; /* { dg-error "overflow" } */
